--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,24 @@
 {
   "name": "القرآن الكريم - حفص",
-  "short_name": "Quran",
+  "short_name": "القرآن",
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#0b132b",
-  "theme_color": "#0b132b",
+  "background_color": "#000000",
+  "theme_color": "#000000",
   "orientation": "portrait",
+
   "icons": [
     {
       "src": "quran-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "quran-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
